--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="format-detection" content="telephone=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="author" content="">
-    <meta name="keywords" content="ecommerce, kids, store">
-    <meta name="description" content="Bootstrap 5 Kids Store Ecommerce HTML CSS Template">
+    <meta name="keywords" content="kids">
+    <meta name="description" content="Bizning o‘yinchoqlar do‘konimiz - bu bolalar orzularining amalga oshadigan joyi! 🎉">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/vendor.css">
     <link rel="stylesheet" type="text/css" href="style.css">
