--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="author" content="">
     <meta name="keywords" content="kids">
-    <meta name="description" content="Bizning o‘yinchoqlar do‘konimiz - bu bolalar orzularining amalga oshadigan joyi! 🎉">
+    <meta name="description" content="Bizning o'yinchoqlar do'konimiz - bu bolalar orzularining amalga oshadigan joyi! 🎉">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="css/vendor.css">
     <link rel="stylesheet" type="text/css" href="style.css">
